tests/sema/fail/v8_fail_print_i64.ep
# COMPILE_FAIL_CONTAINS: print expected str, got i64

fun run(): i64 {
    print(1)
    ret 0
}

fun main(): void {
    exit(run())
}
